--- a/AutoRepsol.csproj
+++ b/AutoRepsol.csproj
@@ -31,9 +31,16 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="assets\repsol-auto.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="sysconfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Installer\" />
   </ItemGroup>
 
 </Project>
