Cambios en el archivo de configuracion json

--- a/sysconfig.json
+++ b/sysconfig.json
@@ -1,5 +1,11 @@
 {
   "dbServer": "ALC-D718SV3\\SQLEXPRESS",
   "dbDataBase": "TRITON",
-  "dbConnection": "Data Source={0};Initial Catalog={1};User ID={2};Password={3}"
+  "dbConnection": "Data Source={0};Initial Catalog={1};User ID={2};Password={3}",
+  "dbEmergencia": {
+    "dbServer": "ALC-D718SV3\\SQLEXPRESS",
+    "dbUser": "",
+    "dbPassword ": "",
+    "dbName": "TRITON"
+  }
 }
