--- a/AutoRepsol.csproj
+++ b/AutoRepsol.csproj
@@ -34,6 +34,9 @@
     <None Update="assets\repsol-auto.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Installer\db_install.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="sysconfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
